--- a/acerca-del-sitio.html
+++ b/acerca-del-sitio.html
@@ -66,9 +66,8 @@
 
 <p><span>3)</span> El contenido relacionado con videojuegos se recopila através de fuentes públicas de internet. </p>
 
-<p><span>4)</span> Por cualquier duda o consulta o problema con / sobre el sitio web porfavor hágamelo saber en el siguiente correo
-
-<a href="mailto:romsxisos@gmail.com">romsxisos@gmail.com</a> Incluya la información requerida para que pueda ser revisada y pueda ser procesada. </p>
+<p><span>4)</span> Por cualquier duda o consulta o problema con / sobre el sitio web porfavor hágamelo saber en la siguiente <a href="https://romsxisos.rf.gd/reportar-problema.html">Página</a>
+<p> Incluya la información requerida para que pueda ser revisada y pueda ser procesada. </p>
 
  </div>
    
