--- a/acerca-del-sitio.html
+++ b/acerca-del-sitio.html
@@ -22,7 +22,7 @@
 
 <meta name="robots" content="noindex, nofollow">
 
-<meta name="description" content=" Novedades del Sitio / RomsXISOs.">
+<meta name="description" content=" Acerca del Sitio / RomsXISOs.">
 
 <meta name="author" content="RomsXISOs">
  
