--- a/acerca-del-sitio.html
+++ b/acerca-del-sitio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Novedades del Sitio Web / RomsXISOs </title>
+  <title>  Acerca del Sitio / RomsXISOs </title>
  <link rel="stylesheet" href="styles/styles_home.css">
  <link rel="stylesheet" href="styles/styles.css">
  
