--- a/index.html
+++ b/index.html
@@ -438,7 +438,21 @@
       <div class="console-title"><a href="roms/segacd_roms.html">Sega CD</a></div>
       <div class="roms-count"> 540 Roms</div>
     </div>
-  
+
+
+<div class="console-box">
+      <img src="https://i.postimg.cc/Yq65jyd3/Sharp-X68000.png" alt="SharpX68000">
+      <div class="console-title"><a href="roms/sharpx68000_roms.html">SharpX68000</a></div>
+      <div class="roms-count">1200 Roms</div>
+    </div>
+
+
+
+  <div class="console-box">
+      <img src="https://i.postimg.cc/cJL29RQG/F8-B5-TJMHEI47-QZV.webp" alt="MUGEN">
+      <div class="console-title"><a href="roms/mugen_roms.html">MUGEN</a></div>
+      <div class="roms-count"> 119 Roms</div>
+    </div>
     
     <div class="console-box">
       <img src="https://i.postimg.cc/fRKM6KFH/Neo-Geo-Pocket-Anthra-Left.png" alt="NeoGeoCD">
