--- a/novedades.html
+++ b/novedades.html
@@ -55,6 +55,13 @@
 
 <div class="novedades">
 
+   <p> 25/06/2025 </p>
+  <p> Se Agrego: </p>
+   <p>▪︎ MUGEN </p>
+   <p>▪︎ SharpX68000 </p>
+  
+    <hr>
+
   <p> 21/06/2025 </p>
   <p> Se Agrego: </p>
    <p>▪︎ MSX </p>
